--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "karma-chrome-launcher": "^3.1.0",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
+    "karma-sinon": "^1.0.5",
     "karma-webpack": "^4.0.2",
     "mocha": "^8.0.1",
+    "sinon": "^9.0.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
